Add NuGetAuditMode to NuGet nominations

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/NuGetRestore.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/NuGetRestore.xaml
@@ -65,6 +65,10 @@
                   ReadOnly="True"
                   Visible="False" />
 
+  <StringProperty Name="NuGetAuditMode"
+                  ReadOnly="True"
+                  Visible="False" />
+
   <StringProperty Name="NuGetLockFilePath"
                   ReadOnly="True"
                   Visible="False" />
