Make build property CompilerGeneratedFilesOutputPath accessible to Roslyn project

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/LanguageService.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/LanguageService.xaml
@@ -35,6 +35,10 @@
   <StringProperty Name="TargetRefPath"
                   ReadOnly="True"
                   Visible="False" />
+  
+  <StringProperty Name="CompilerGeneratedFilesOutputPath"
+                  ReadOnly="True"
+                  Visible="False" />
 
   <StringProperty Name="MaxSupportedLangVersion"
                   ReadOnly="True"
